--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h2>Test Content</h2>
             <div>
                 <p>Welcome to my website!</p>
-                <p> <img src="https://via.placeholder.com/100"></p>
+                <p> <img src="https://via.placeholder.com/500/D1DCFF/146414;"></p>
             </div>
             <div class="Hello_World">
                 <p> This is my <a href="helloWorld/helloWorld_html.html">Hello World</a> portfolio project.</p>
