adding in Project-Link6 directory and associated files. (#14)

--- a/helloWorld/helloWorld_html.html
+++ b/helloWorld/helloWorld_html.html
@@ -56,6 +56,7 @@
 					<li>Project <a href="Project-Link3.html">Number Three</a></li>
                     <li>Project <a href="Project-Link4.html">Number Four</a></li>
                     <li>Project <a href="Project-Link5.html">Number Five</a></li>
+					<li>Project <a href="Project-Link6/Project-Link6.html">Number Six</a></li>
 				</ul>
 				<p>When I want to link to another author's work, I might create a link that <a href="new-tab.html" target="_blank">opens a new tab</a>.</p>
 			</div>
@@ -119,9 +120,27 @@
 				</div>
 			</div>
             <div class="section" id="sec4">
-                <h2>Filler Text xD</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ea eos consequatur? Quidem sint repudiandae odio quae veritatis corrupti quisquam facere ipsa? Dolor recusandae officiis ut nesciunt quaerat voluptatem veritatis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, recusandae similique accusantium adipisci sed itaque optio a, debitis cum architecto dolor iste ea numquam, molestias neque necessitatibus cumque. Tempore, omnis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores saepe iste asperiores! Vero, fugit quibusdam autem eum facere corrupti, id necessitatibus sunt sit saepe, tempore commodi sapiente. Nihil, laudantium eum?</p>
-            </div>
+				<h2>Filler Text</h2>
+				<div class="HiLevel" id="sec4-1">
+					<h3> Below is some filler text created with lorem ipsum generation in vscode</h3>
+                	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ea eos consequatur?
+						Quidem sint repudiandae odio quae veritatis corrupti quisquam facere ipsa? Dolor recusandae
+						officiis ut nesciunt quaerat voluptatem veritatis. Lorem, ipsum dolor sit amet consectetur
+						adipisicing elit. Commodi, recusandae similique accusantium adipisci sed itaque optio a, debitis
+						cum architecto dolor iste ea numquam, molestias neque necessitatibus cumque. Tempore, omnis!
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores saepe iste asperiores! Vero,
+						fugit quibusdam autem eum facere corrupti, id necessitatibus sunt sit saepe, tempore commodi
+						sapiente. Nihil, laudantium eum?</p>
+				</div>
+				<div class="HiLevel" id="sec4-2">
+					<h3>Different Filler Text</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto excepturi nihil
+						voluptas? Aliquid atque eaque ex harum in iste, laboriosam mollitia odio praesentium quam
+						recusandae unde ut? At, dolores. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Aspernatur facere magnam quis vitae? Animi corporis culpa dolore dolorem incidunt laboriosam
+						nulla quae quis quisquam sunt. Alias error nulla odio saepe.</p>
+				</div>
+			</div>
 		</main>
 	</body>
 </html>
