--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>BraveGrumpy.com</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <div class="title" id="sec0">
