Patch03 local edits 01 (#23)
* changed direction of slash in reference to project 6.
Goal: work with amplify

* changed direction of slash in reference to project 6.
Goal: work with amplify

* deleted python, published branch, added icon
Deleted python,
Deleted flask template
Added dropdown menue on helloWorld_html.html
added icon
changed js in new-tab.html, so that errorlogs are printed in a new paragraph.
Changed helloWorld_html.html for clarity

--- a/helloWorld/Project-Link.html
+++ b/helloWorld/Project-Link.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Project-Link</title>
+		<link rel="icon" href="drawing.svg">
 		<link rel="stylesheet" type="text/css" href="helloWorld_css.css">
 	<head>
 	<body>
