--- a/helloWorld/Project-Link2.html
+++ b/helloWorld/Project-Link2.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="helloWorld_css.css">
+	<link rel="icon" href="drawing.svg">
 	<title>Project-Link2</title>
 
 </head>
@@ -29,11 +30,11 @@
 			<h2>JavaScript changing Images</h2>
 				<p>JavaScript can change html attribute values. <br> This means that it is not limited to just text. You can change the src (source) attribute of an image tag.</p>
 
-				<button onclick="document.getElementById('face').src='img_face_sad.png.lnk'">Make Mike Sad</button>
+				<button onclick="document.getElementById('face').src='img_face_sad.png'">Make Mike Sad</button>
 
-				<img src="img_face_happy.png.lnk" id="face" style="width:300px;">
+				<img src="img_face_happy.png" id="face" style="width:300px;">
 
-				<button onclick="document.getElementById('face').src='img_face_happy.png.lnk'">Make Mike Happy</button-->
+				<button onclick="document.getElementById('face').src='img_face_happy.png'"> Make Mike Happy </button>
 		</div>
 
 		<div class="section interactive" id="p2sec4">
@@ -44,7 +45,7 @@
 
 		<div class="section interactive" id="p2sec5">
 			<h2>Hiding HTML elements</h2>
-			<p id="hide-element" display = "none">This is a paragraph. If this works, there will be a button that makes it go poof. This is a secret message. If you want to hide it, press one of the buttons.</p>
+			<p id="hide-element" display ="none">This is a paragraph. If this works, there will be a button that makes it go poof. This is a secret message. If you want to hide it, press one of the buttons.</p>
 			<button onclick="document.getElementById('hide-element').style.display = 'none'">Hide the secret Message</button>
 			<button onclick="document.getElementById('hide-element').style.display = 'block'">Show the secret Message</button>
 			
