--- a/helloWorld/Project-Link3.html
+++ b/helloWorld/Project-Link3.html
@@ -1,9 +1,9 @@
 <!Doctype HTML>
 	<html>
 		<head>
-			<title>
-				Experimenting with Dark Patterns
-			</title>
+			<title>Experimenting with Dark Patterns</title>
+			<link rel="stylesheet" href="helloWorld_css.css">
+			<link rel="icon" href="drawing.svg">
 		</head>
 		<body>
 			<h1>Dark Patterns</h1>
