--- a/helloWorld/Project-Link4.html
+++ b/helloWorld/Project-Link4.html
@@ -6,10 +6,10 @@
         <title>HTML5 Game?</title>
     </head>
     <body>
-        <form action="helloWorld_html.html">
+        <form>
             <p>Would you like to go back home?</p>
-            <button type="">Yes</button>
-            <button type="">No</button>
+            <button type="button" onclick="location.href='helloWorld_html.html'">Yes</button>
+            <button type="button" onclick="location.href='Project-Link4.html'">No</button>
         </form>
         <div>
             <p id="it">YOU FOUND IT</p>
