--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>BraveGrumpy.com</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
+        <link rel="icon" href="helloWorld/drawing.svg">
     </head>
     <body>
         <div class="title" id="sec0">
@@ -13,7 +14,7 @@
             <h2>Test Content</h2>
             <div>
                 <p>Welcome to my website!</p>
-                <p> <img src="https://via.placeholder.com/500/D1DCFF/146414/text=This+is+a+placeholder\ntext;"></p>
+                <p> <img src="https://via.placeholder.com/500x150.png/d1dcff/146414?text=Welcome+to+bravegrumpy.com"></p>
             </div>
             <div class="Hello_World">
                 <p> This is my <a href="helloWorld/helloWorld_html.html">Hello World</a> portfolio project.</p>
