--- a/helloWorld/Project-Link6/Project-Link6.html
+++ b/helloWorld/Project-Link6/Project-Link6.html
@@ -10,7 +10,7 @@
     <h1>Project 6</h1>
   </div>
   <div class="section" id="sec1">
-    <h2>First Section</h2>
+    <h2>First Section</h2> <!--TODO: brainstorm useful applet to put here.-->
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid, cupiditate deleniti dignissimos
       dolore est inventore maiores minima necessitatibus, nostrum optio quaerat quam rerum saepe similique ut voluptas,
       voluptate? Hic!</p>
