--- a/helloWorld/helloWorld_html.html
+++ b/helloWorld/helloWorld_html.html
@@ -1,45 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
+		<meta encoding="utf-8">
 		<title>Test Portfolio</title>
 		<link rel="stylesheet" href="helloWorld_css.css"/>
+		<link rel="icon" href="drawing.svg">
 		<script src="helloWorld_js.js"></script>
 	</head>
+
 	<body>
 		<div class="title" id="sec0">
 			<h1>Hello World Code</h1>
 		</div>
+<!-------------------------------------------------------------------------------------------------------------------->
 		<main>
-			<!--div class="section" id="sec1" style="background-color: #d2c8ff;"-->
 			<div class="section" id="sec1">
 				<h2>Trying Things Out</h2>
-				<p>This page will probably link to other things I have done. </p>
-				<p>Here are my top three favorite projects</p>
-				<ul>
-					<li>Project <a href="Project-Link.html"> Number One </a></li>
-					<li>Project <a href="Project-Link2.html">Number Two</a></li>
-					<li>Project <a href="Project-Link3.html">Number Three</a></li>
-                    <li>Project <a href="Project-Link4.html">Number Four</a></li>
-                    <li>Project <a href="Project-Link5.html">Number Five</a></li>
-					<li>Project <a href="Project-Link6/Project-Link6.html">Number Six</a></li>
-				</ul>
-				<p>When I want to link to another author's work, I might create a link that <a href="new-tab.html" target="_blank">opens a new tab</a>.</p>
+				<p>The Portfolio Projects dropdown menu holds various files I have created. </p>
+				<div class="list dropdown navbar" id="portfolios">
+					<button class="dropdown-button">Portfolio Projects</button>
+					<div class="dropdown-content">
+						<a href="Project-Link.html"> Project Number One </a>
+						<a href="Project-Link2.html"> Project Number Two </a>
+						<a href="Project-Link3.html"> Project Number Three </a>
+						<a href="Project-Link4.html"> Project Number Four </a>
+						<a href="Project-Link5.html"> Project Number Five </a>
+						<a href="Project-Link6/Project-Link6.html"> Project Number Six </a>
+					</div>
+				</div>
+
+				<div class="section subsection" id="sec1-2">
+					<br/>
+					<p> When I want to link to another author's work, I might create a link that <a href="new-tab.html" target="_blank"> opens a new tab</a>.</p>
+				</div>
+
+				<div class="section subsection" id="sec1-3">
+					<h2>Notes about content below the line:</h2>
+					<p>All further content on this page is non-functional. This means that no data is saved, and there are no linked js files, beyond the alerts that you see.</p>
+				</div>
 			</div>
-			<!--div class="section" id="sec2" style="background-color: #d2c8ff;"-->
+			<hr/>
+
+<!-------------------------------------------------------------------------------------------------------------------->
+
 			<div class="section" id="sec2">
 				<h2>Submitting Information in a form</h2>
-				<p>Another intention of this page will be to effectively format it. Clearly, the appropriate CSS and JS files will be in this folder, and linked in the html head.</p>
+				<p>Another intention of this page will be to effectively format it. Clearly, the appropriate CSS and JS
+					files will be in this folder, and linked in the html head.</p>
 
 				<div class="interactive HiLevel" id="sec2-1">
 					<h3>Enter Ideas Here:</h3>
 					<p class="note-text">Note that you must enter an idea before pressing submit.</p>
 					<form action="Form-Redirect1.html">
 						<div class="interactive" id="sec2-1-1">
-							Required Field:<input id="input1" type="text" name="title" placeholder="Idea title: not optional" required><br>
-							Optional Field: <input type="text" placeholder="Optional Information"><br><br>
+							<label for="input1">Required Field:
+								<input id="input1" type="text" name="title" placeholder="Idea title: not optional" required>
+							</label><br/>
+							<label for="input2">Optional Information:
+								<input id="input2" type="text" name="optional info" placeholder="Optional Information">
+							</label><br/><br/>
 						</div>
 						<div class="interactive" id="sec2-1-2">
-							Choose your favorite option:<br>
+
+							Choose your favorite option:<br/>
 							<label for="one">
 								<input id="one" type="radio" name="favorite-number" value="one"> One
 							</label><br>
@@ -48,32 +71,34 @@
 							</label><br>
 							<label for="three">
 								<input id="three" type="radio" name="favorite-number" value="three">Three
-							</label><br><br>
+							</label><br/><br/>
+
 							Choose all the options you like:<br>
 							<label for="ice-cream">
 								<input id="ice-cream" type="checkbox" name="food" value="ice-cream"> Ice Cream
 							</label><br>
 							<label for="pizza">
-								<input id="pizza"type="checkbox" name="food" value="pizza">Pizza
+								<input id="pizza" type="checkbox" name="food" value="pizza">Pizza
 							</label><br>
 							<label for="sushi">
-								<input id="sushi"type="checkbox" name="food" value="sushi">Sushi
+								<input id="sushi" type="checkbox" name="food" value="sushi">Sushi
 							</label><br>
 							<label for="onions">
-								<input id="onions"type="checkbox" name="food" value="onions">Onions
+								<input id="onions" type="checkbox" name="food" value="onions">Onions
 							</label><br><br>
+
 							<p class="sidebar">Uncheck this box if you want to continue:
 							<label for="consent">
-								<input id="consent"type="checkbox" name="continue" value="consent" checked>
+								<input id="consent" type="checkbox" name="continue" value="consent" checked>
 							</label></p><br>
 						</div>
 						<button type="submit">ENTER</button>
 					</form>
 				</div>
 			</div>
-			<!--div class="section">
-				<p></p>
-			</div-->
+
+<!-------------------------------------------------------------------------------------------------------------------->
+
 			<div class="section" id= "sec3">
 				<div class="interactive HiLevel" id="sec3-1">
 					<form action="Form-Redirect2.html">
@@ -84,7 +109,10 @@
 					</form>
 				</div>
 			</div>
-            <div class="section" id="sec4">
+
+<!-------------------------------------------------------------------------------------------------------------------->
+
+			<div class="section" id="sec4">
 				<h2>Filler Text</h2>
 				<div class="HiLevel" id="sec4-1">
 					<h3> Below is some filler text created with lorem ipsum generation in vscode</h3>
