--- a/helloWorld/Form-Redirect1.html
+++ b/helloWorld/Form-Redirect1.html
@@ -1,9 +1,38 @@
 <!Doctype html>
-<html>
+<html lang="en-us">
 	<head>
 		<title>Form Redirect</title>
+		<link rel="stylesheet" href="helloWorld_css.css"/>
+		<link rel="stylesheet" href="nav.css">
+		<link rel="icon" href="drawing.svg">
 	</head>
 	<body>
+	<nav>
+		<ul>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="helloWorld_html.html">Hello World Main</a></li>
+			<li class="dropdown">
+				<a href="javascript:void(0)" class="dropdown-button">Project Links</a>
+				<div class="dropdown-content">
+					<a href="Project-Link.html">Project 1</a>
+					<a href="Project-Link2.html">Project 2</a>
+					<a href="Project-Link3.html">Project 3</a>
+					<a href="Project-Link4.html">Project 4</a>
+					<a href="Project-Link5.html">Project 5</a>
+					<a href="Project-Link6/Project-Link6.html">Project 6</a>
+				</div>
+			</li>
+			<li class="dropdown">
+				<a href="javascript:void(0)" class="dropdown-button active">Misc. Files</a>
+				<div class="dropdown-content">
+					<a href="Form-Redirect1.html" class="active">Form Redirect 1</a>
+					<a href="Form-Redirect2.html">Form Redirect 2</a>
+					<a href="new-tab.html">new tab</a>
+					<a href="../err404.html">error404</a>
+				</div>
+			</li>
+		</ul>
+	</nav>
 		<h1>You Pressed Enter</h1>
 		<div class="form" id="enter1">
 			<form action="helloWorld_html.html">
