--- a/helloWorld/Project-Link2.html
+++ b/helloWorld/Project-Link2.html
@@ -1,14 +1,41 @@
 <!Doctype html>
-<html>
+<html lang="en-us">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="helloWorld_css.css">
+	<link rel="stylesheet" href="nav.css">
 	<link rel="icon" href="drawing.svg">
 	<title>Project-Link2</title>
 
 </head>
 <body>
+<nav>
+	<ul>
+		<li><a href="../index.html">Home</a></li>
+		<li><a href="helloWorld_html.html">Hello World Main</a></li>
+		<li class="dropdown">
+			<a href="javascript:void(0)" class="dropdown-button active">Project Links</a>
+			<div class="dropdown-content">
+				<a href="Project-Link.html">Project 1</a>
+				<a href="Project-Link2.html" class="active">Project 2</a>
+				<a href="Project-Link3.html">Project 3</a>
+				<a href="Project-Link4.html">Project 4</a>
+				<a href="Project-Link5.html">Project 5</a>
+				<a href="Project-Link6/Project-Link6.html">Project 6</a>
+			</div>
+		</li>
+		<li class="dropdown">
+			<a href="javascript:void(0)" class="dropdown-button">Misc. Files</a>
+			<div class="dropdown-content">
+				<a href="Form-Redirect1.html">Form Redirect 1</a>
+				<a href="Form-Redirect2.html">Form Redirect 2</a>
+				<a href="new-tab.html">new tab</a>
+				<a href="../err404.html">error404</a>
+			</div>
+		</li>
+	</ul>
+</nav>
 	<div class="title"><h1>What can JavaScript do?</h1></div>
 		<p>These sections are following the JavaScript introduction in w3schools. However, all assets are of my own creation.</p>
 	<div class="page HiLevel" id="project2">
@@ -32,7 +59,7 @@
 
 				<button onclick="document.getElementById('face').src='img_face_sad.png'">Make Mike Sad</button>
 
-				<img src="img_face_happy.png" id="face" style="width:300px;">
+				<img alt="doodled happy face" src="img_face_happy.png" id="face" style="width:300px;">
 
 				<button onclick="document.getElementById('face').src='img_face_happy.png'"> Make Mike Happy </button>
 		</div>
@@ -45,7 +72,7 @@
 
 		<div class="section interactive" id="p2sec5">
 			<h2>Hiding HTML elements</h2>
-			<p id="hide-element" display ="none">This is a paragraph. If this works, there will be a button that makes it go poof. This is a secret message. If you want to hide it, press one of the buttons.</p>
+			<p id="hide-element" display="none">This is a paragraph. If this works, there will be a button that makes it go poof. This is a secret message. If you want to hide it, press one of the buttons.</p>
 			<button onclick="document.getElementById('hide-element').style.display = 'none'">Hide the secret Message</button>
 			<button onclick="document.getElementById('hide-element').style.display = 'block'">Show the secret Message</button>
 			
