--- a/helloWorld/helloWorld_html.html
+++ b/helloWorld/helloWorld_html.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<meta encoding="utf-8">
 		<title>Test Portfolio</title>
 		<link rel="stylesheet" href="helloWorld_css.css"/>
+		<link rel="stylesheet" href="nav.css"/>
 		<link rel="icon" href="drawing.svg">
 		<script src="helloWorld_js.js"></script>
 	</head>
@@ -12,14 +12,40 @@
 		<div class="title" id="sec0">
 			<h1>Hello World Code</h1>
 		</div>
+		<nav>
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="helloWorld_html.html" class="active">Hello World Main</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropdown-button">Project Links</a>
+					<div class="dropdown-content">
+						<a href="Project-Link.html">Project 1</a>
+						<a href="Project-Link2.html">Project 2</a>
+						<a href="Project-Link3.html">Project 3</a>
+						<a href="Project-Link4.html">Project 4</a>
+						<a href="Project-Link5.html">Project 5</a>
+						<a href="Project-Link6/Project-Link6.html">Project 6</a>
+					</div>
+				</li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropdown-button">Misc. Files</a>
+					<div class="dropdown-content">
+						<a href="Form-Redirect1.html">Form Redirect 1</a>
+						<a href="Form-Redirect2.html">Form Redirect 2</a>
+						<a href="new-tab.html">new tab</a>
+						<a href="../err404.html">error404</a>
+					</div>
+				</li>
+			</ul>
+		</nav>
 <!-------------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div class="section" id="sec1">
 				<h2>Trying Things Out</h2>
 				<p>The Portfolio Projects dropdown menu holds various files I have created. </p>
-				<div class="list dropdown navbar" id="portfolios">
-					<button class="dropdown-button">Portfolio Projects</button>
-					<div class="dropdown-content">
+				<div class="list helloWorld-dropdown navbar" id="portfolios">
+					<button class="helloWorld-dropdown-button">Portfolio Projects</button>
+					<div class="helloWorld-dropdown-content">
 						<a href="Project-Link.html"> Project Number One </a>
 						<a href="Project-Link2.html"> Project Number Two </a>
 						<a href="Project-Link3.html"> Project Number Three </a>
