Patch03 local edits 02 (#25)
* added navigation bar
added in navbar in each html file
added nav.css for styling
edited the dropdown for helloWorld_html.html

* added navigation bar
added in navbar in each html file
added nav.css for styling
edited the dropdown for helloWorld_html.html

--- a/helloWorld/Project-Link6/Project-Link6.html
+++ b/helloWorld/Project-Link6/Project-Link6.html
@@ -41,7 +41,9 @@
     </header>
     <div class="CustomSection" id="sec1">
         <h2>First Section</h2> <!--TODO: brainstorm useful applet to put here.-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid, cupiditate deleniti dignissimos dolore est inventore maiores minima necessitatibus, nostrum optio quaerat quam rerum saepe similique ut voluptas,  voluptate? Hic!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid, cupiditate deleniti dignissimos
+            dolore est inventore maiores minima necessitatibus, nostrum optio quaerat quam rerum saepe similique ut
+            voluptas,  voluptate? Hic!</p>
     </div>
     <footer></footer>
 </body>
