--- a/helloWorld/helloWorld_html.html
+++ b/helloWorld/helloWorld_html.html
@@ -18,6 +18,7 @@
 				<li><a href="helloWorld_html.html" class="active">Hello World Main</a></li>
 				<li class="dropdown">
 					<a href="javascript:void(0)" class="dropdown-button">Project Links</a>
+					<!--TODO: Is it possible to concatinate a whole bunch of html files?-->
 					<div class="dropdown-content">
 						<a href="Project-Link.html">Project 1</a>
 						<a href="Project-Link2.html">Project 2</a>
