--- a/helloWorld/Project-Link.html
+++ b/helloWorld/Project-Link.html
@@ -1,43 +1,70 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
-
-<head>
-	<title>Project-Link</title>
-	<link rel="icon" href="drawing.svg">
-	<link rel="stylesheet" type="text/css" href="helloWorld_css.css">
-	<link rel="icon" href="drawing.svg"/>
-	<script src="helloWorld_js.js"/>
-<head>
-<body>
-	<nav>
-		<ul>
-			<li><a href="../index.html">Home</a></li>
-			<li><a href="helloWorld_html.html">Hello World Main</a></li>
-			<li class="dropdown">
-				<a href="javascript:void(0)" class="dropdown-button active">Project Links</a>
-				<div class="dropdown-content">
-					<a href="Project-Link.html" class="active">Project 1</a>
-					<a href="Project-Link2.html">Project 2</a>
-					<a href="Project-Link3.html">Project 3</a>
-					<a href="Project-Link4.html">Project 4</a>
-					<a href="Project-Link5.html">Project 5</a>
-					<a href="Project-Link6/Project-Link6.html">Project 6</a>
-				</div>
-			</li>
-			<li class="dropdown">
-				<a href="javascript:void(0)" class="dropdown-button">Misc. Files</a>
-				<div class="dropdown-content">
-					<a href="Form-Redirect1.html">Form Redirect 1</a>
-					<a href="Form-Redirect2.html">Form Redirect 2</a>
-					<a href="new-tab.html">new tab</a>
-					<a href="../err404.html">error404</a>
-				</div>
-			</li>
-		</ul>
-	</nav>
-		<div class="section">
-			<h1>You Clicked a Link</h1>
-			<p>Return to <a href="helloWorld_html.html">main page</a></p>
+	<head>
+		<meta charset="utf-8">
+		<link rel="icon" href="drawing.svg">
+		<link rel="stylesheet" href="helloWorld_css.css">
+		<link rel="stylesheet" href="nav.css">
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="helloWorld_html.html">Hello World Main</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropdown-button active">Project Links</a>
+					<div class="dropdown-content">
+						<a href="Project-Link.html" class="active">Project 1</a>
+						<a href="Project-Link2.html">Project 2</a>
+						<a href="Project-Link3.html">Project 3</a>
+						<a href="Project-Link4.html">Project 4</a>
+						<a href="Project-Link5.html">Project 5</a>
+						<a href="Project-Link6/Project-Link6.html">Project 6</a>
+					</div>
+				</li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropdown-button">Misc. Files</a>
+					<div class="dropdown-content">
+						<a href="Form-Redirect1.html">Form Redirect 1</a>
+						<a href="Form-Redirect2.html">Form Redirect 2</a>
+						<a href="new-tab.html">new tab</a>
+						<a href="../err404.html">error404</a>
+					</div>
+				</li>
+			</ul>
+		</nav>
+		<div class="title">
+			<h1>Project</h1>
 		</div>
+		<div>
+			<p>You clicked a link</p>
+			<p>Would you like to <a href="helloWorld_html.html">Return Home </a>now?</p>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="helloWorld_html.html">Hello World Main</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropdown-button active">Project Links</a>
+					<div class="dropdown-content">
+						<a href="Project-Link.html" class="active">Project 1</a>
+						<a href="Project-Link2.html">Project 2</a>
+						<a href="Project-Link3.html">Project 3</a>
+						<a href="Project-Link4.html">Project 4</a>
+						<a href="Project-Link5.html">Project 5</a>
+						<a href="Project-Link6/Project-Link6.html">Project 6</a>
+					</div>
+				</li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropdown-button">Misc. Files</a>
+					<div class="dropdown-content">
+						<a href="Form-Redirect1.html">Form Redirect 1</a>
+						<a href="Form-Redirect2.html">Form Redirect 2</a>
+						<a href="new-tab.html">new tab</a>
+						<a href="../err404.html">error404</a>
+					</div>
+				</li>
+			</ul>
+		</nav>
 	</body>
 </html>
