Cafe-Menu Project

--- a/helloWorld/Project-Link4.html
+++ b/helloWorld/Project-Link4.html
@@ -6,6 +6,8 @@
         <link rel="icon" href="drawing.svg">
         <script src="project-Link4.js"></script>
         <title>HTML5 Game?</title>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4527800333185471"
+     crossorigin="anonymous"></script>
     </head>
     <body>
     <nav>
