--- a/helloWorld/new-tab.html
+++ b/helloWorld/new-tab.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="nav.css">
         <link rel="icon" href="drawing.svg"/>
         <script src="new-tab.js" async></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4527800333185471"
+     crossorigin="anonymous"></script>
     </head>
     <body>
     <nav>
