--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="helloWorld/nav.css">
         <script src="script.js"></script>
         <link rel="icon" href="helloWorld/drawing.svg">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4527800333185471"
+     crossorigin="anonymous"></script>
     </head>
     <body>
     <nav>
