--- a/err404.html
+++ b/err404.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="helloWorld/nav.css">
         <link rel="icon" href="helloWorld/drawing.svg"/>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4527800333185471"
+     crossorigin="anonymous"></script>
     </head>
     <body>
     <nav>
