--- a/helloWorld/Form-Redirect2.html
+++ b/helloWorld/Form-Redirect2.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="nav.css"/>
 	<link rel="icon" href="drawing.svg"/>
 	<title>Form 2</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4527800333185471"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <nav>
