--- a/helloWorld/Project-Link5.html
+++ b/helloWorld/Project-Link5.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="nav.css"/>
         <link rel="icon" href="drawing.svg">
         <script src="Project-Link5.js" defer></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4527800333185471"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
