--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <a href="helloWorld/Project-Link4.html">Project 4</a>
                     <a href="helloWorld/Project-Link5.html">Project 5</a>
                     <a href="helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                    <a href="#Huetopia/index.html">Huetopia</a>
                 </div>
             </li>
             <li class="dropdown">
