Adding in map so I can use it as a favicon.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="helloWorld/Project-Link4.html">Project 4</a>
                     <a href="helloWorld/Project-Link5.html">Project 5</a>
                     <a href="helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
-                    <a href="#Huetopia/index.html">Huetopia</a>
+                    <a href="#">Huetopia</a>
                 </div>
             </li>
             <li class="dropdown">
@@ -33,6 +33,7 @@
                     <a href="err404.html">error404</a>
                 </div>
             </li>
+            <li><a href="#">Creative Writing</a></li>
         </ul>
     </nav>
         <div class="title" id="sec0">
