Adding in relevant files for huetopia part of the website.

--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -3,13 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Huetopia: a novel">
+    <!--meta name="description" content="Huetopia: a novel">
     <meta name="author" content="Skylar Seacrest">
-    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
+    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera"-->
     <title>Huetopia Welcome Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <div class="header">
+        <div class="title">
+            <h1>Huetopia</h1>
+            <p><span>A colorful continent within a magical world</span></p>
+        </div>
+    </div>
+    <div class="menu">
+        <ul>
+            <li><a href="../index.html">BraveGrumpy Home</a></li>
+            <li><a href="idea-pitch.html">Idea Pitch</a></li>
+            <li><a href="logline.html">Logline</a> </li>
+            <li><a href="dramatic-question.html">Dramatic Question</a></li>
+            <li><a href="character-profiles/index.html">Character Profiles</a></li>
+            <li><a href="chapter-outlines/index.html">Chapter Outlines</a></li>
+            <li><a href="chapters">Huetopia Book 1</a></li>
+        </ul>
+    </div>
+    <div class="main">
+        <h2>Welcome to Huetopia</h2>
+        <p>Huetopia is a world that I have been building for some time.</p>
+        <p>This website is for chronicling my progress, as I follow the <a href="#">Writing your First Novel</a> course published by {{somebody}} on Coursera </p>
+    </div>
 </body>
 </html>
