--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -3,34 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--meta name="description" content="Huetopia: a novel">
+    <meta name="description" content="Huetopia: a novel">
     <meta name="author" content="Skylar Seacrest">
-    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera"-->
+    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
     <title>Huetopia Welcome Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="title">
-            <h1>Huetopia</h1>
-            <p><span>A colorful continent within a magical world</span></p>
+    <div class="row">
+        <div class="col-m-12 header">
+            <div class="col-m-4"></div>
+            <div class="col-m-4 title">
+                <h1>Huetopia</h1>
+                <p><span>A colorful continent within a magical world</span></p>
+            </div>
+            <div class="col-m-4"></div>
         </div>
     </div>
-    <div class="menu">
-        <ul>
-            <li><a href="../index.html">BraveGrumpy Home</a></li>
-            <li><a href="idea-pitch.html">Idea Pitch</a></li>
-            <li><a href="logline.html">Logline</a> </li>
-            <li><a href="dramatic-question.html">Dramatic Question</a></li>
-            <li><a href="character-profiles/index.html">Character Profiles</a></li>
-            <li><a href="chapter-outlines/index.html">Chapter Outlines</a></li>
-            <li><a href="chapters">Huetopia Book 1</a></li>
-        </ul>
+    <div class="row">
+        <div class="col-m-3 col-s-3 menu">
+            <ul>
+                <li><a href="content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
+                <li><a href="content/writing-preparation/logline.html">Logline</a> </li>
+                <li><a href="content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
+                <li><a href="content/character-profiles/index.html">Character Profiles</a></li>
+                <li><a href="content/chapter-outlines/index.html">Chapter Outlines</a> </li>
+                <li><a href="content/chapters/index.html">Chapters</a> </li>
+            </ul>
+        </div>
+
+        <div class="col-m-6 col-s-9 center">
+            <h2>Welcome to Huetopia</h2>
+            <p>Huetopia is a world that I have been building for some time.</p>
+            <p>This website is for chronicling my progress, as I follow the <a href="#">Writing your First Novel</a> course published by {{somebody}} on Coursera </p>
+        </div>
+
+        <div class="col-m-3 col-s-12 right">
+            <div class="aside">
+                <h2>Logline</h2>
+                <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
+                <h2>Dramatic Question</h2>
+                <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
+            </div>
+        </div>
     </div>
-    <div class="main">
-        <h2>Welcome to Huetopia</h2>
-        <p>Huetopia is a world that I have been building for some time.</p>
-        <p>This website is for chronicling my progress, as I follow the <a href="#">Writing your First Novel</a> course published by {{somebody}} on Coursera </p>
+
+    <div class="row">
+        <div class="col-m-12 footer">
+            <div class="col-m-2 copyright">
+                <p>Copyright BraveGrumpy 2022</p>
+            </div>
+            <div class="col-m-10"></div>
+        </div>
     </div>
 </body>
 </html>
