--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -22,7 +22,8 @@
     </div>
     <div class="row">
         <div class="col-m-3 col-s-3 menu">
-            <ul>
+            <ul class="col-xl-6">
+                <li><a href="../index.html">BraveGrumpy Home</a> </li>
                 <li><a href="content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
                 <li><a href="content/writing-preparation/logline.html">Logline</a> </li>
                 <li><a href="content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
@@ -30,6 +31,7 @@
                 <li><a href="content/chapter-outlines/index.html">Chapter Outlines</a> </li>
                 <li><a href="content/chapters/index.html">Chapters</a> </li>
             </ul>
+            <div class="col-xl-6"></div>
         </div>
 
         <div class="col-m-6 col-s-9 center">
