continuing to make the project look better

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="helloWorld/helloWorld_html.html">Hello World Main</a></li>
-            <li class="helloWorld-dropdown">
+            <li class="dropdown">
                 <a href="javascript:void(0)" class="dropdown-button">Project Links</a>
                 <div class="dropdown-content">
                     <a href="helloWorld/Project-Link.html">Project 1</a>
