--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
     <title>Huetopia Welcome Page</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="icon" href="assets/images/map01_001_d.png">
 </head>
 <body>
     <div class="row">
@@ -20,27 +21,48 @@
             <div class="col-m-4"></div>
         </div>
     </div>
+
     <div class="row">
-        <div class="col-m-3 col-s-3 menu">
-            <ul class="col-xl-6">
+        <div class="col-xl-12 navbar xl-only">
+            <ul>
+                <li><a href="../index.html">BraveGrumpy Home</a> </li>
+                <li><a href="../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)">Hello World Project Files</a>
+                    <div class="dropdown-content">
+                        <a href="../helloWorld/Project-Link.html">Project 1</a>
+                        <a href="../helloWorld/Project-Link2.html">Project 2</a>
+                        <a href="../helloWorld/Project-Link3.html">Project 3</a>
+                        <a href="../helloWorld/Project-Link4.html">Project 4</a>
+                        <a href="../helloWorld/Project-Link5.html">Project 5</a>
+                        <a href="../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                    </div>
+                </li>
+                <li><a href="javascript:void(0)">Hello World Misc Files</a> </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-s-3 col-m-3 menu">
+            <ul class="nav-list">
                 <li><a href="../index.html">BraveGrumpy Home</a> </li>
                 <li><a href="content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
-                <li><a href="content/writing-preparation/logline.html">Logline</a> </li>
+                <li><a href="content/writing-preparation/logline.html">Logline</a></li>
                 <li><a href="content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
-                <li><a href="content/character-profiles/index.html">Character Profiles</a></li>
-                <li><a href="content/chapter-outlines/index.html">Chapter Outlines</a> </li>
-                <li><a href="content/chapters/index.html">Chapters</a> </li>
+                <li><a href="content/character-profiles/index.html">Character Profiles</a> </li>
             </ul>
-            <div class="col-xl-6"></div>
         </div>
 
-        <div class="col-m-6 col-s-9 center">
-            <h2>Welcome to Huetopia</h2>
-            <p>Huetopia is a world that I have been building for some time.</p>
-            <p>This website is for chronicling my progress, as I follow the <a href="#">Writing your First Novel</a> course published by {{somebody}} on Coursera </p>
+        <div class="col-s-9 col-m-6 center">
+            <div class="section">
+                <h2>Welcome to Huetopia</h2>
+                <p>Huetopia is a world that I have been building for some time.</p>
+                <p>This website is for chronicling my progress, as I follow the <a href="#">Writing your First Novel</a> course published by {{somebody}} on Coursera </p>
+            </div>
         </div>
 
-        <div class="col-m-3 col-s-12 right">
+        <div class="col-s-12 col-m-3 right">
             <div class="aside">
                 <h2>Logline</h2>
                 <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
@@ -55,7 +77,11 @@
             <div class="col-m-2 copyright">
                 <p>Copyright BraveGrumpy 2022</p>
             </div>
-            <div class="col-m-10"></div>
+            <div class="col-m-3"></div>
+            <div class="col-m-2 contact-me">
+                <p>Join the <a href="https://discord.gg/nf9Uq7BwPn">Discord Server</a> </p>
+            </div>
+            <div class="col-m-5"></div>
         </div>
     </div>
 </body>
