Finalizing the desired CSS for now. Next I need to add content.

--- a/Huetopia/content/writing-preparation/character-profiles/skylar-seacrest.html
+++ b/Huetopia/content/writing-preparation/character-profiles/skylar-seacrest.html
@@ -10,7 +10,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chapter Outlines</title>
+    <title>Skylar Seacrest</title>
 </head>
 <body>
 
