--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -10,7 +10,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chapter Outlines</title>
+    <title>Atichaos Archibald</title>
 </head>
 <body>
 
