--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -1,3 +1,11 @@
+<!--
+  ~ Copyright (c) 2022.  BraveGrumpy.
+  ~ Do not reproduce contents without express written permission from the author.
+  ~ You can get permission by cloning the repository https://github.com/robin-zollner/bravegrumpy.website.git, and creating a new branch.
+  ~ Otherwise, you can email seacrestskylar@gmail.com, or join the discord server, linked within each page.
+  ~ The purpose of this website, is to practice responsive web design, and to publish creative writing.
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,10 +33,9 @@
     <div class="row">
         <div class="col-xl-12 navbar xl-only">
             <ul>
-                <li><a href="../index.html">BraveGrumpy Home</a> </li>
-                <li><a href="../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)">Hello World Project Files</a>
+                <li class="col-xl-1"><a href="../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+                <li class="col-xl-1 dropdown">
+                    <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
                     <div class="dropdown-content">
                         <a href="../helloWorld/Project-Link.html">Project 1</a>
                         <a href="../helloWorld/Project-Link2.html">Project 2</a>
@@ -38,7 +45,9 @@
                         <a href="../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
                     </div>
                 </li>
-                <li><a href="javascript:void(0)">Hello World Misc Files</a> </li>
+                <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
+                <li class="col-xl-1"><a href="index.html">Creative Writing Home</a> </li>
+                <li class="col-xl-7"><br><br></li>
             </ul>
         </div>
     </div>
@@ -46,11 +55,12 @@
     <div class="row">
         <div class="col-s-3 col-m-3 menu">
             <ul class="nav-list">
-                <li><a href="../index.html">BraveGrumpy Home</a> </li>
+                <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
+                <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
                 <li><a href="content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
                 <li><a href="content/writing-preparation/logline.html">Logline</a></li>
                 <li><a href="content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
-                <li><a href="content/character-profiles/index.html">Character Profiles</a> </li>
+                <li><a href="content/writing-preparation/character-profiles/index.html">Character Profiles</a> </li>
             </ul>
         </div>
 
@@ -58,7 +68,7 @@
             <div class="section">
                 <h2>Welcome to Huetopia</h2>
                 <p>Huetopia is a world that I have been building for some time.</p>
-                <p>This website is for chronicling my progress, as I follow the <a href="#">Writing your First Novel</a> course published by {{somebody}} on Coursera </p>
+                <p>This website is for chronicling my progress, as I follow the <a href="https://www.coursera.org/learn/write-your-first-novel/home/info" target="_blank">Writing your First Novel</a> course. It is taught by <a href="https://www.coursera.org/instructor/dwheeler">David Wheeler </a> and published by <a href="https://msu.edu/">Michigan State University</a> on <a href="http://www.coursera.org">Coursera</a> </p>
             </div>
         </div>
 
@@ -79,7 +89,7 @@
             </div>
             <div class="col-m-3"></div>
             <div class="col-m-2 contact-me">
-                <p>Join the <a href="https://discord.gg/nf9Uq7BwPn">Discord Server</a> </p>
+                <p><a href="https:///discord.gg/nf9Uq7BwPn"><img src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
             </div>
             <div class="col-m-5"></div>
         </div>
