Adding link to Huetopia Homepage

--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -57,6 +57,7 @@
             <ul class="nav-list">
                 <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
                 <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
+                <li><a href="index.html">Huetopia Homepage</a> </li>
                 <li><a href="content/writing-preparation/idea-pitch.html">Idea Pitch</a></li>
                 <li><a href="content/writing-preparation/logline.html">Logline</a></li>
                 <li><a href="content/writing-preparation/dramatic-question.html">Dramatic Question</a> </li>
@@ -89,7 +90,7 @@
             </div>
             <div class="col-m-3"></div>
             <div class="col-m-2 contact-me">
-                <p><a href="https:///discord.gg/nf9Uq7BwPn"><img src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
+                <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt="Join the Discord Server in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
             </div>
             <div class="col-m-5"></div>
         </div>
