--- a/Huetopia/content/writing-preparation/index.html
+++ b/Huetopia/content/writing-preparation/index.html
@@ -57,6 +57,7 @@
         <ul class="nav-list">
             <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
             <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
+            <li><a href="../../index.html">Huetopia Homepage</a> </li>
             <li><a href="idea-pitch.html">Idea Pitch</a></li>
             <li><a href="logline.html">Logline</a></li>
             <li><a href="dramatic-question.html">Dramatic Question</a> </li>
