updated Readme, and added a bunch of TODO notes.

--- a/Huetopia/content/writing-preparation/character-profiles/index.html
+++ b/Huetopia/content/writing-preparation/character-profiles/index.html
@@ -69,6 +69,7 @@
         <div class="section">
             <h2>Character Profiles</h2>
             <p>This page is under construction</p>
+            <!--TODO: Upload the contents to the appropriate pages-->
         </div>
     </div>
 
@@ -85,7 +86,7 @@
 <div class="row">
     <div class="col-m-12 footer">
         <div class="col-m-2 copyright">
-            <p>Copyright BraveGrumpy 2022</p>
+            <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
         </div>
         <div class="col-m-3"></div>
         <div class="col-m-2 contact-me">
