--- a/Huetopia/content/writing-preparation/character-profiles/skylar-seacrest.html
+++ b/Huetopia/content/writing-preparation/character-profiles/skylar-seacrest.html
@@ -13,6 +13,6 @@
     <title>Skylar Seacrest</title>
 </head>
 <body>
-
+    <!--TODO: Finish Writing, and then populate this page.-->
 </body>
 </html>
