--- a/Huetopia/index.html
+++ b/Huetopia/index.html
@@ -86,7 +86,7 @@
     <div class="row">
         <div class="col-m-12 footer">
             <div class="col-m-2 copyright">
-                <p>Copyright BraveGrumpy 2022</p>
+                <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
             </div>
             <div class="col-m-3"></div>
             <div class="col-m-2 contact-me">
