--- a/Huetopia/content/writing-preparation/character-profiles/index.html
+++ b/Huetopia/content/writing-preparation/character-profiles/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Huetopia: a novel">
     <meta name="author" content="Skylar Seacrest">
     <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
-    <title>Writing Prep Activities</title>
+    <title>Character Profiles</title>
     <link rel="stylesheet" href="../../../stylesheets/styles.css">
     <link rel="icon" href="../../../assets/images/map01_001_d.png">
 </head>
@@ -58,10 +58,10 @@
             <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
             <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
             <li><a href="../../../index.html">Huetopia Homepage</a> </li>
-            <li><a href="../idea-pitch.html">Idea Pitch</a></li>
-            <li><a href="../logline.html">Logline</a></li>
-            <li><a href="../dramatic-question.html">Dramatic Question</a> </li>
-            <li><a href="index.html">Character Profiles</a> </li>
+            <li><a href="index.html">Character Profiles Home</a> </li>
+            <li><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
+            <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
+            <li><a href="#">Lytea[?]</a></li>
         </ul>
     </div>
 
