--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -66,15 +66,19 @@
 
     <div class="col-s-9 col-m-6 center">
         <div class="section">
-            <h2>Idea Pitch</h2>
-            <p>This story is set in a world where color is the root of all magic. Most of it focuses on a river with plains on one side and menacing mountains on the other. The Great Circular Lake, with a diameter twice that of the Wide River’s width, lies to the east of the Triangular mountains. Each culture within the region is named after a shape. The terrain dictates the colors that are easy to obtain. This, in turn, dictates what resources this society has ready access to. Specific people, known as artists, can channel color magic to provide necessary resources. For example, being able to paint runes with green and yellow creates food, and red offers life and death. Knowing how to obtain or make more complex colors allows for more complex resources. Different religions have disparate stories about how humans understood color and how artists came to have power.</p>
-            <p>One religion pays homage to the water dragon in the river, who comes and bestows the concept of a new primary color to the worthiest artist.</p>
-            <p>Another religion believes that their world is made up of a group of deities known as the “Art Collective” and that all Huetopia exists in somebody’s painting.</p>
-            <p>The following plot takes the reader on a tour of this world’s rich history and geography.</p>
-            <p>An unlikely group of graduate students goes on a field trip to discover their history and their ancestor’s role in shaping the world today. Color is magic. When our characters are born, color magic is carefully tuned to create technology. This kind of magic has not always been readily available in a mostly peaceful society. Uncovering the past will help these students write their thesis and discover the unsavory circumstances that have allowed their world to move past war.</p>
-            <p>The first stop on the trip is an abandoned temple built into the side of some cliffs in the Triangle Mountains. As the group recedes from civilization and the woods get older, the group finds some runes painted on the trees. However, the runes seem to have much less saturation than the modern color magic on today’s tablets.</p>
-            <p>The group must overcome challenges to discover their past and get to the temple.</p>
-        </div>
+            <h2>Atichaos Archibald</h2>
+            <h3>Aliases</h3>
+            <ul>
+                <li>The Whisperer</li>
+                <li>Harrowing</li>
+                <li>Professor Arch</li>
+                <li>Atti</li>
+            </ul>
+            <h3>Age</h3>
+            <h3>Profession</h3>
+            <h3>Speech</h3>
+            <h3>Roots</h3>
+            <h3>Patents</h3>
     </div>
 
     <div class="col-s-12 col-m-3 right">
