--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -6,107 +6,158 @@
   ~ The purpose of this website, is to practice responsive web design, and to publish creative writing.
   -->
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Huetopia: a novel">
-    <meta name="author" content="Skylar Seacrest">
-    <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera, Character Profiles">
-    <title>Atichaos Archibald</title>
-    <link rel="stylesheet" href="../../../stylesheets/styles.css">
-    <link rel="icon" href="../../../assets/images/map01_001_d.png">
-</head>
-<body>
-<div class="row">
-    <div class="col-m-12 header">
-        <div class="col-m-4"></div>
-        <div class="col-m-4 title">
-            <h1>Huetopia</h1>
-            <p><span>A colorful continent within a magical world</span></p>
-        </div>
-        <div class="col-m-4"></div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-xl-12 navbar xl-only">
-        <ul>
-            <li class="col-xl-1"><a href="../../../../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
-            <li class="col-xl-1 dropdown">
-                <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
-                <div class="dropdown-content">
-                    <a href="../../../../helloWorld/Project-Link.html">Project 1</a>
-                    <a href="../../../../helloWorld/Project-Link2.html">Project 2</a>
-                    <a href="../../../../helloWorld/Project-Link3.html">Project 3</a>
-                    <a href="../../../../helloWorld/Project-Link4.html">Project 4</a>
-                    <a href="../../../../helloWorld/Project-Link5.html">Project 5</a>
-                    <a href="../../../../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
-                </div>
-            </li>
-            <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
-            <li class="col-xl-1"><a href="index.html">Creative Writing Home</a> </li>
-            <li class="col-xl-7"><br><br></li>
-        </ul>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-s-3 col-m-3 menu">
-        <ul class="nav-list">
-            <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
-            <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
-            <li><a href="../../../index.html">Huetopia Homepage</a> </li>
-            <li><a href="index.html">Character Profiles Home</a> </li>
-            <li><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
-            <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
-            <li><a href="#">Lytea[?]</a></li>
-        </ul>
-    </div>
-
-    <div class="col-s-9 col-m-6 center">
-        <div class="section">
-            <h2>Atichaos Archibald</h2>
-            <h3>Aliases</h3>
-            <ul>
-                <li>The Whisperer</li>
-                <li>Harrowing</li>
-                <li>Professor Arch</li>
-                <li>Atti</li>
-            </ul>
-            <h3>Age</h3>
-            <h3>Profession</h3>
-            <h3>Speech</h3>
-            <h3>Roots</h3>
-            <h3>Patents</h3>
-    </div>
-
-    <div class="col-s-12 col-m-3 right">
-        <div class="aside">
-            <!--
-            TODO: Distill character down to a few bullet points, for easy consumption, and for reference in the home page.
-            -->
-            <h2>Logline</h2>
-            <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
-            <h2>Dramatic Question</h2>
-            <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-m-12 footer">
-        <div class="col-m-2 copyright">
-            <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
-        </div>
-        <div class="col-m-3"></div>
-        <div class="col-m-2 contact-me">
-            <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt= "join our discord in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
-        </div>
-        <div class="col-m-5"></div>
-    </div>
-</div>
-
-</body>
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Huetopia: a novel">
+      <meta name="author" content="Skylar Seacrest">
+      <meta name="keywords" content="Fantasy, Sci-Fi, World-building, novel, fiction, Huetopia, creative writing, Coursera">
+      <title>Character Profiles</title>
+      <link rel="stylesheet" href="../../../stylesheets/styles.css">
+      <link rel="icon" href="../../../assets/images/map01_001_d.png">
+  </head>
+  <body>
+  <div class="row">
+      <div class="col-m-12 header">
+          <div class="col-m-4"></div>
+          <div class="col-m-4 title">
+              <h1>Huetopia</h1>
+              <p><span>A colorful continent within a magical world</span></p>
+          </div>
+          <div class="col-m-4"></div>
+      </div>
+  </div>
+  
+  <div class="row">
+      <div class="col-xl-12 navbar xl-only">
+          <ul>
+              <li class="col-xl-1"><a href="../../../../helloWorld/helloWorld_html.html">Hello World Web-dev portfolio</a></li>
+              <li class="col-xl-1 dropdown">
+                  <a class="dropdown-button" href="javascript:void(0)">Hello World Project Files</a>
+                  <div class="dropdown-content">
+                      <a href="../../../../helloWorld/Project-Link.html">Project 1</a>
+                      <a href="../../../../helloWorld/Project-Link2.html">Project 2</a>
+                      <a href="../../../../helloWorld/Project-Link3.html">Project 3</a>
+                      <a href="../../../../helloWorld/Project-Link4.html">Project 4</a>
+                      <a href="../../../../helloWorld/Project-Link5.html">Project 5</a>
+                      <a href="../../../../helloWorld/Project-Link6/Project-Link6.html">Project 6</a>
+                  </div>
+              </li>
+              <li class="col-xl-1"><a href="javascript:void(0)">Hello World Misc Files</a> </li>
+              <li class="col-xl-1"><a href="index.html">Creative Writing Home</a> </li>
+              <li class="col-xl-7"><br><br></li>
+          </ul>
+      </div>
+  </div>
+  
+  <div class="row">
+      <div class="col-s-3 col-m-3 menu">
+          <ul class="nav-list">
+              <!--Uncomment the first <li> tag to allow users to get to BraveGrumpy home.-->
+              <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
+              <li><a href="../../../index.html">Huetopia Homepage</a> </li>
+              <li><a href="index.html">Character Profiles Home</a> </li>
+              <li><a href="attichaos-archibald2.html">Attichaos Archibald</a></li>
+              <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
+              <li><a href="#">Lytea[?]</a></li>
+          </ul>
+      </div>
+  
+      <div class="col-s-9 col-m-6 center">
+          <div class="section">
+              <h2>Atichaos Archibald</h2>
+              <h3>Aliases</h3>
+              <ul>
+                  <li>The Whisperer</li>
+                  <li>Harrowing</li>
+                  <li>Professor Arch</li>
+                  <li>Atti</li>
+              </ul>
+              <h3>Age</h3>
+              <p>72, but nobody truly knows</p>
+              <h3>What others think of Atti</h3>
+              <p>
+                <ul>
+                    <li>Boisterous</li>
+                    <li>Chaotic</li>
+                    <li>Kind</li>
+                    <li>Friendly</li>
+                </ul>
+              </p>
+              <h3>Profession</h3>
+              <p>Professor at The Academy</p>
+              <h3>Speech</h3>
+              <p>Has a slight Italian accent. The reader would recognize this as a heavy New York City accent.</p>
+              <h3>Roots</h3>
+              <p>Grew up in the inner projects of the old T-Fort City. He was secretly a color-magic adept. Once he got through Euclidian school (the equivalent to K-12 in Huetopia), the [TriVerment] offered him a job scouting for other color-magic adepts in addition to doing product development.</p>
+              <h3>Patents</h3>
+              <p>The modern [Lite Brite] technology. This is the lighting technology that allows for modern-day food production.</p>
+              <p>
+                <ul>
+                    <li>That being said, Atti stole the idea from some Scholars in the Ancient Artist Temple.</li>
+                    <li>The widespread use of printing and stickers was previously the best method of using the color-magic</li>
+                    <li>Atti saw the tablets in the Ancient Temple and knew that the [TriVerment] would want to have them.</li>
+                </ul>
+              </p>
+              <h3>Music Taste</h3>
+              <p>Orchestral Symphonies</p>
+              <h3>Alcoholic Drink of choice</h3>
+              <p>
+                <ul>
+                    <li>Fictional equivalent to Scotch Whiskey (I need to figure out how this specific alcohol production started. It is a Trapezoidal import, a sign of significant wealth.)
+                    </li>
+                    <li>Fine Linarian wine</li>
+                    <li>Vodka, boiled from the depths of the Circular Lake</li>
+                </ul>
+              </p>
+              <h4>In other words</h4>
+              <p></p>
+              <h3>Fashion (as Professor Arch)</h3>
+              <p></p>
+              <h3>Hair</h3>
+              <p></p>
+              <h3>If found in a coffee shop, what would he order, and what would he do?</h3>
+              <p></p>
+              <h3>Food</h3>
+              <p></p>
+              <h3>Personality</h3>
+              <p></p>
+              <h3>Syllabus/Curriculum that he teaches</h3>
+              <p></p>
+              <h3>When Flirting</h3>
+              <p></p>
+              <h3>Does he like pizza?</h3>
+              <p></p>
+              <h3>Did he ever like pizza?</h3>
+              <p></p>
+              <h3>How does he get to work?</h3>
+              <p></p>
+          </div>
+      </div>
+  
+      <div class="col-s-12 col-m-3 right">
+          <div class="aside">
+              <h2>Logline</h2>
+              <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
+              <h2>Dramatic Question</h2>
+              <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
+          </div>
+      </div>
+  </div>
+  
+  <div class="row">
+      <div class="col-m-12 footer">
+          <div class="col-m-2 copyright">
+              <p>Copyright &copy 2022 BraveGrumpy&trade;</p>
+          </div>
+          <div class="col-m-3"></div>
+          <div class="col-m-2 contact-me">
+              <p><a href="https:///discord.gg/nf9Uq7BwPn"><img alt= "join our discord in fun font." src="https://fontmeme.com/permalink/221211/d065f759532815397d12a82c27e8988c.png"></a> </p>
+          </div>
+          <div class="col-m-5"></div>
+      </div>
+  </div>
+  </body>
+  </html>
