styling and arch continuation

--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -59,7 +59,7 @@
               <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
               <li><a href="../../../index.html">Huetopia Homepage</a> </li>
               <li><a href="index.html">Character Profiles Home</a> </li>
-              <li><a href="attichaos-archibald2.html">Attichaos Archibald</a></li>
+              <li class="active"><a href="attichaos-archibald2.html">Attichaos Archibald</a></li>
               <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
               <li><a href="#">Lytea[?]</a></li>
           </ul>
@@ -113,7 +113,7 @@
                 </ul>
               </p>
               <h4>In other words</h4>
-              <p></p>
+              <p>tichaos Archibald has expensive taste. This makes sense, as he has spent 53 years on the cushy TriVerment payroll. Atti’s students do NOT know quite how wealthy he truly is, as he dresses like a frumpy professor.</p>
               <h3>Fashion (as Professor Arch)</h3>
               <p></p>
               <h3>Hair</h3>
