--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -115,9 +115,17 @@
               <h4>In other words</h4>
               <p>tichaos Archibald has expensive taste. This makes sense, as he has spent 53 years on the cushy TriVerment payroll. Atti’s students do NOT know quite how wealthy he truly is, as he dresses like a frumpy professor.</p>
               <h3>Fashion (as Professor Arch)</h3>
-              <p></p>
+              <p>Brown Tweed Jackets, sweater vests, khaki slacks, well-polished black wing-tipped oxford shoes. Yes, he is mismatched. He also wears purple argyle socks.</p>
               <h3>Hair</h3>
-              <p></p>
+              <p>He has a mane of extremely curly brown hair. Think 3B hair. This extends to his beard and mustache.</p>
+              <h3>Hobbies</h3>
+              <ul>
+                <li>Origami</li>
+                <li>Writing</li>
+                <li>Drawing</li>
+                <li>eating peanut butter</li>
+                <li>flying kites</li>                    
+              </ul>
               <h3>If found in a coffee shop, what would he order, and what would he do?</h3>
               <p></p>
               <h3>Food</h3>
