--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -29,6 +29,10 @@
             <div class="col-m-4"></div>
             </div>
         </div>
+
+        <!--div class="row">
+            <div class="col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12 spacer"></div>
+        </div-->
   
         <div class="row">
             <div class="col-xl-12 navbar xl-only">
@@ -180,7 +184,12 @@
                     </div>
                     <div class="subsection">
                         <h3>How does he get to work?</h3>              
-                        <p>Atichaos Archibald has two residences. One residence is a manor in the fields of Linaria. He spends off-seasons there, and this is where he will take meetings with TriVerment officials. He also has a flat in the classy part of downtown, a 10-minute stroll from his office and a 15-minute walk from the lecture hall he most often teaches in. On the way to work, he stops at a café each morning and gets a cup of hot black coffee and a croissant. (Of course, this is different than what he would typically get at a café in Linaria)</p>
+                        <p>
+                            Atichaos Archibald has two residences. One residence is a manor in the fields of Linaria. He spends off-seasons there, 
+                            and this is where he will take meetings with TriVerment officials. He also has a flat in the classy part of downtown, a 10-minute
+                            stroll from his office and a 15-minute walk from the lecture hall he most often teaches in. On the way to work, he stops
+                            at a café each morning and gets a cup of hot black coffee and a croissant. (Of course, this is different than what he would
+                            typically get at a café in Linaria)</p>
                     </div>
                 </div>
             </div>
@@ -198,6 +207,10 @@
                 </div>
             </div>
         </div>
+        
+        <!--div class="row">
+            <div class="col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12 spacer"></div>
+        </div-->
         
   
         <div class="row">
